Use Integer.valueOf instead of New Integer